--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -18,7 +18,8 @@
     <encoding>UTF-8</encoding>
     <repo.scala-ide>http://download.scala-ide.org</repo.scala-ide>
     <repo.toolchain>${repo.scala-ide}</repo.toolchain>
-    <repo.juno>http://download.eclipse.org/releases/juno/</repo.juno>
+    <!--repo.juno>http://download.eclipse.org/releases/juno/</repo.juno -->
+    <repo.juno>http://download.eclipse.org/eclipse/updates/4.2-I-builds</repo.juno>
     <repo.ajdt>http://download.eclipse.org/tools/ajdt/37/dev/update/</repo.ajdt>
   </properties>
 
