Support for toString in detail pane
Improved the support for logical structure for collections
Changed the display name for array indexes
Added support for symbols in names

With tests

--- a/org.scala-ide.sdt.debug/plugin.xml
+++ b/org.scala-ide.sdt.debug/plugin.xml
@@ -29,11 +29,11 @@
             class="scala.tools.eclipse.debug.ScalaDebugPlugin">
       </startup>
    </extension>
-<!--   <extension
+   <extension
          point="org.eclipse.debug.core.logicalStructureProviders">
       <logicalStructureProvider
             class="scala.tools.eclipse.debug.model.ScalaLogicalStructureProvider"
             modelIdentifier="org.scala-ide.sdt.debug">
       </logicalStructureProvider>
-   </extension> -->
+   </extension>
 </plugin>
