--- a/org.scala-ide.sbt.full.library/pom.xml
+++ b/org.scala-ide.sbt.full.library/pom.xml
@@ -4,13 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.scala-ide</groupId>
+    <version>2.9.2-RC1</version>
     <artifactId>scala-toolchain-for-eclipse</artifactId>
-    <version>2.9.2-SNAPSHOT</version>
     <relativePath>../org.scala-ide.build-toolchain/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.sbt.full.library</artifactId>
-  <version>${sbt.version}.${version.suffix}-${maven.build.timestamp}</version>
   <packaging>bundle</packaging>
+  
   <dependencies>
     <dependency>
       <groupId>org.scala-tools.sbt</groupId>
@@ -365,36 +365,6 @@
             </goals>
             <configuration>
               <artifactItems>
-<!--                <artifactItem>
-                  <groupId>org.scala-lang</groupId>
-                  <artifactId>scala-library</artifactId>
-                  <version>${scala.compiler.version}</version>
-                  <classifier>sources</classifier>
-                  <type>jar</type>
-                  <destFileName>scala-${scala.major.minor.version}/lib/scala-library-src.jar</destFileName>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.scala-lang</groupId>
-                  <artifactId>scala-library</artifactId>
-                  <version>${scala.compiler.version}</version>
-                  <type>jar</type>
-                  <destFileName>scala-${scala.major.minor.version}/lib/scala-library.jar</destFileName>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.scala-lang</groupId>
-                  <artifactId>scala-compiler</artifactId>
-                  <version>${scala.compiler.version}</version>
-                  <classifier>sources</classifier>
-                  <type>jar</type>
-                  <destFileName>scala-${scala.major.minor.version}/lib/scala-compiler-src.jar</destFileName>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.scala-lang</groupId>
-                  <artifactId>scala-compiler</artifactId>
-                  <version>${scala.compiler.version}</version>
-                  <type>jar</type>
-                  <destFileName>scala-${scala.major.minor.version}/lib/scala-compiler.jar</destFileName>
-                </artifactItem> -->
                 <artifactItem>
                   <groupId>org.scala-tools.sbt</groupId>
                   <artifactId>precompiled-${sbt.compiled.version}-${scala.precompiled.version}</artifactId>
@@ -404,26 +374,6 @@
                 </artifactItem>
               </artifactItems>
               <outputDirectory>${project.build.directory}/lib</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>properties-maven-plugin</artifactId>
-        <version>1.0-alpha-2</version>
-        <executions>
-          <execution>
-            <phase>initialize</phase>
-            <goals>
-              <goal>read-project-properties</goal>
-            </goals>
-            <configuration>
-              <files>
-<!--                <file>${project.build.directory}/xsbt.version.properties</file>-->
-<!--                <file>${project.build.directory}/library.properties</file>
-                <file>${project.build.directory}/compiler.properties</file>-->
-              </files>
             </configuration>
           </execution>
         </executions>
