Fixed the trunk build. Actors moved to their own package, so we package them together with the scala-library bundle.

--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -42,6 +42,11 @@
         <artifactId>scala-dbc</artifactId>
         <version>${scala.library.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-actors</artifactId>
+        <version>${scala.library.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
