Added back dependencies for the trunk profile. Maven profiles are confusing: even though the default-libs profile is active by default, and adds the 3 dependencies, they are not part of the generated output when the scala-trunk profile is on.

--- a/org.scala-ide.scala.library/pom.xml
+++ b/org.scala-ide.scala.library/pom.xml
@@ -91,6 +91,18 @@
       <dependencies>
         <dependency>
           <groupId>org.scala-lang</groupId>
+          <artifactId>scala-library</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.scala-lang</groupId>
+          <artifactId>scala-swing</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.scala-lang</groupId>
+          <artifactId>scala-dbc</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.scala-lang</groupId>
           <artifactId>scala-actors</artifactId>
         </dependency>
       </dependencies>
