Heavy cleanup of pom files and scripts.
* Using ${osgi.version.number} when creating the MANIFEST of both scala-compiler and scala-library jars.

* Created a parent pom project that contains definitions common to all projects.

* Cleaned up pom files (removed useless profiles from both ``build`` and ``build-toolcahin`` projects)

* Deleted no longer needed build scripts.

--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -2,7 +2,13 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.scala-ide</groupId>
+  <parent>
+    <groupId>org.scala-ide</groupId>
+    <artifactId>scala-ide-for-eclipse</artifactId>
+    <version>1</version>
+    <relativePath>../org.scala-ide/pom.xml</relativePath>
+  </parent>
+  
   <artifactId>scala-toolchain-for-eclipse</artifactId>
   <version>2.9.2-SNAPSHOT</version>
   <name>The Scala Toolchain for Eclipse</name>
@@ -10,9 +16,9 @@
 
   <properties>
     <sbt.version>0.11.2-scalaide-03</sbt.version>
-    <patch.level>p0002</patch.level>
-    <encoding>UTF-8</encoding>
+    <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
     <scala.library.version>${scala.version}</scala.library.version>
+    <scala.compiler.version>${scala.version}</scala.compiler.version>
   </properties>
 
   <modules>
@@ -67,61 +73,15 @@
   </build>
   <profiles>
     <profile>
-      <id>default</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
-        <scala.compiler.version>${scala.version}</scala.compiler.version>
-        <maintenance.suffix></maintenance.suffix>
-        <patch.level.suffix></patch.level.suffix>
-      </properties>
-
-      <repositories>
-        <repository>
-          <id>sonatype.releases</id>
-          <name>Replacement for Scala Tools Maven2 Repository</name>
-          <url>https://oss.sonatype.org/content/repositories/releases/</url>
-        </repository>
-        <repository>
-          <id>sonatype.snapshot</id>
-          <name>Replacement for Scala Tools maven snapshot repository</name>
-          <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-          <snapshots>
-            <updatePolicy>daily</updatePolicy>
-          </snapshots>
-        </repository>
-      </repositories>
-    </profile>
-
-    <profile>
-      <id>local</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
-        <scala.compiler.version>${scala.version}</scala.compiler.version>
-        <maintenance.suffix></maintenance.suffix>
-        <patch.level.suffix></patch.level.suffix>
-      </properties>
-    </profile>
-    
-    <profile>
       <id>sbt-2.10</id>
       <properties>
-        <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
-        <scala.compiler.version>${scala.version}</scala.compiler.version>
         <version.suffix>2_10</version.suffix>
 
         <!-- Used as part of the artifact name for SBT cross-compiled modules. -->
-        <scala.major.minor.version>2.10</scala.major.minor.version>
+        <scala.major.minor.version>${scala.version.short}</scala.major.minor.version>
 
         <!-- Used as part of the artifact name for SBT cross-compiled modules. -->
         <sbt.compiled.version>${sbt.scala.version}</sbt.compiled.version>
-        <maintenance.suffix></maintenance.suffix>
-        <patch.level.suffix></patch.level.suffix>
       </properties>
       <repositories>
         <repository>
@@ -140,61 +100,16 @@
         <version.suffix>2_09</version.suffix>
 
         <!-- Used as part of the directory name for compiler-interface.jar. -->
-        <scala.major.minor.version>2.9</scala.major.minor.version>
+        <scala.major.minor.version>${scala.version.short}</scala.major.minor.version>
 
         <!-- Used as part of the artifact name for SBT cross-compiled modules. -->
         <sbt.compiled.version>${sbt.scala.version}</sbt.compiled.version>
-
-        <maintenance.suffix></maintenance.suffix>
-        <patch.level.suffix></patch.level.suffix>
       </properties>
       <repositories>
         <repository>
           <id>typesafe-ide-2.9</id>
           <name>Typesafe IDE 2.9 repository</name>
           <url>http://repo.typesafe.com/typesafe/ide-2.9</url>
-        </repository>
-      </repositories>
-    </profile>
-    
-    <profile>
-      <id>sbt-2.8</id>
-      <properties>
-        <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
-        <scala.compiler.version>${scala.version}</scala.compiler.version>
-        <version.suffix>2_08</version.suffix>
-
-        <!-- Used as part of the directory name for compiler-interface.jar. -->
-        <scala.major.minor.version>2.8</scala.major.minor.version>
-
-        <!-- Used as part of the artifact name for SBT cross-compiled modules. -->
-        <sbt.compiled.version>${sbt.scala.version}</sbt.compiled.version>
-        <maintenance.suffix></maintenance.suffix>
-        <patch.level.suffix></patch.level.suffix>
-      </properties>
-      <repositories>
-        <repository>
-          <id>typesafe-ide-2.8</id>
-          <name>Typesafe IDE 2.8 repository</name>
-          <url>http://repo.typesafe.com/typesafe/ide-2.8</url>
-        </repository>
-      </repositories>
-    </profile>
-
-
-    <profile>
-      <id>maintenance</id>
-      <properties>
-        <scala.compiler.groupid>org.scala-ide</scala.compiler.groupid>
-        <scala.compiler.version>2.8.0.final-maintenance</scala.compiler.version>
-        <maintenance.suffix>-sdt</maintenance.suffix>
-        <patch.level.suffix>-${patch.level}</patch.level.suffix>
-      </properties>
-      <repositories>
-        <repository>
-          <id>scala-ide.org</id>
-          <name>Scala IDE Toolchain maintenance repository</name>
-          <url>http://download.scala-ide.org/scala-eclipse-toolchain-2.8.0.final-maintenance</url>
         </repository>
       </repositories>
     </profile>
