--- a/org.scala-ide.scala.library/pom.xml
+++ b/org.scala-ide.scala.library/pom.xml
@@ -9,7 +9,6 @@
     <relativePath>../org.scala-ide.build-toolchain/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.scala.library</artifactId>
-  <version>${scala.library.version}</version>
   <packaging>bundle</packaging>
 
   <profiles>
@@ -244,10 +243,10 @@
           <instructions>
             <Bundle-SymbolicName>org.scala-ide.scala.library</Bundle-SymbolicName>
             <Bundle-Name>Scala Library for Eclipse</Bundle-Name>
-            <Bundle-Version>${version.number}${patch.level.suffix}</Bundle-Version>
+            <Bundle-Version>${osgi.version.number}</Bundle-Version>
             <Bundle-Vendor>scala-ide.org</Bundle-Vendor>
             <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
-            <_exportcontents>scala.reflect;version=${version.number},scala.*;version=${version.number}</_exportcontents>
+            <_exportcontents>scala.reflect;version=${osgi.version.number},scala.*;version=${osgi.version.number}</_exportcontents>
             <Embed-Directory>lib</Embed-Directory>
             <Embed-StripVersion>true</Embed-StripVersion>
             <Include-Resource>lib=${project.build.directory}/lib</Include-Resource>
