Re-introduced version number in org.scala-ide.sbt.full.library POM (it is suffixed in the name assigned to the bundled JAR)

--- a/org.scala-ide.sbt.full.library/pom.xml
+++ b/org.scala-ide.sbt.full.library/pom.xml
@@ -9,6 +9,7 @@
     <relativePath>../org.scala-ide.build-toolchain/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.sbt.full.library</artifactId>
+  <version>${sbt.version}-${version.suffix}-${maven.build.timestamp}</version>
   <packaging>bundle</packaging>
   
   <dependencies>
