Fixed Helium 2.9.x nightly.
The POM cleanup performed Friday removed the ``scala.version.short`` property
from the ``sbt-2.9`` profile in the ``org.scala-ide.build-toolchain`` POM file.
Added back, this should fix the build.

--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -95,9 +95,8 @@
     <profile>
       <id>sbt-2.9</id>
       <properties>
-        <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
-        <scala.compiler.version>${scala.version}</scala.compiler.version>
         <version.suffix>2_09</version.suffix>
+        <scala.version.short>2.9</scala.version.short>
 
         <!-- Used as part of the directory name for compiler-interface.jar. -->
         <scala.major.minor.version>${scala.version.short}</scala.major.minor.version>
