Added a ``Open the Log`` menu item under the Scala menu
I've made two changes to make the log easier to consult:

* Added a ``Open the Log`` menu item under the Scala menu. Clicking
  on it will open the log file inside Eclipse (using a standard text
  editor).

* The dialog opened when clicking the ``Report A Bug`` menu item
  (which is also located under the Scala menu) now contains a link to
  open the log file.

Hopefully, these changes will make it easier for a user to consult the
log and provide potentially useful information when creating a bug report.

Fixed #1000970.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -220,16 +220,23 @@
          <groupMarker name="additions"/>
        </menu>
        <action id="org.scala-ide.sdt.ui.runDiag.action"
-         label="Run Setup Diagnostics..."
+         label="Run Setup Diagnostics"
          menubarPath="org_scala-ide_sdt_ui_menu/diagnostics"
          tooltip="Verify that Scala configuration is correct"
          class="scala.tools.eclipse.actions.RunDiagnosticAction"
          enablesFor="*">
        </action>
        <action id="org.scala-ide.sdt.ui.reportBug.action"
-         label="Report a Bug..."
+         label="Report a Bug"
          menubarPath="org_scala-ide_sdt_ui_menu/additions"
          tooltip="Report a bug in the Scala Development Tools"
+         class="scala.tools.eclipse.actions.RunDiagnosticAction"
+         enablesFor="*">
+       </action>
+       <action id="org.scala-ide.sdt.ui.openLogFile.action"
+         label="Open the Log"
+         menubarPath="org_scala-ide_sdt_ui_menu/additions"
+         tooltip="Open the Log file in an editor"
          class="scala.tools.eclipse.actions.RunDiagnosticAction"
          enablesFor="*">
        </action>       
